deploy/vllm-helm-chart/vllm/templates/service.yaml
# vllm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-service
spec:
  selector:
    app: vllm
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
